[package]
name = "bevy_blob_loader"
description = "Bevy plugin for loading assets from JavaScript blob URLs."
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[workspace]
resolver = "2"
members = ["example"]

[workspace.package]
version = "0.0.6"
edition = "2021"
repository = "https://github.com/kayhhh/bevy_blob_loader"
license = "MIT OR Apache-2.0"

[dependencies]
base64 = "0.22"
bevy = { version = "0.14", default-features = false, features = [
    "bevy_asset",
    "webgl2",
] }
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Request", "Window", "Response"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
